--------------------------------------------------------------------------------
 Fusion 1.213 - November 12th, 2004
--------------------------------------------------------------------------------
- 12-13-04: Preparing indeces. Midway release for conversion. [AlexKreuz]
- 12-13-04: Fixed form again. [AlexKreuz]
- 12-13-04: Supernovice and advanced classes use their own exp values now. [Tsusai]
- 12-13-04: Cleaned up login.pas [Tsusai]
- 12-13-04: Didn't save a file for commiting. [Tsusai]
- 12-13-04: Changed BannedIPs.txt's native location and added it to backup. [Tsusai]
- 12-13-04: Upgraded the double login procedure. [Tsusai]
- 12-13-04: Booleanized TPlayer.Login  [Tsusai]
- 12-12-04: Massive optimization of REED Loading structure. [AlexKreuz]
- 12-12-04: Tweaked the kick/ban of online characters. [Tsusai]
- 12-12-04: Nuked JCon Characters page. Needed to optimize loading speeds. [AlexKreuz]
- 12-12-04: Account.txt now records last IP used when logging in. [Tsusai]
- 12-12-04: Forgot to remove my debug stuff again... [Tsusai]
- 12-12-04: Added static ip banning (no wildcards yet). [Tsusai]
- 12-12-04: Updated the backup function for servervars.txt [Tsusai]
- 12-12-04: Removed unnecessary console commands. [Tsusai]
- 12-11-04: Fixed JCon Account ID list width. [AlexKreuz]
- 12-11-04: Optimized JCon Account save speed. [AlexKreuz]
- 12-11-04: Bug #1: Characters with Guild ID 0 could make more Guilds. [AlexKreuz]
- 12-11-04: Changed servervars save path. [Tsusai]
- 12-10-04: Commented out debug lines from last addon. [Tsusai]
- 12-10-04: Recoded server variable saving and loading. [Tsusai]
- 12-10-04: Disabled call_mercenary gm command. Includes way too many bugs. [AlexKreuz]
- 12-10-04: Cleaned up ghetto call_mercenary code. Let's start keeping Fusion code clean. [AlexKreuz]
- 12-10-04: Guild creation skipped ID if user relogged in first. [AlexKreuz]
- 12-09-04: Temporary server string variables being saved is fixed. [Tsusai]